--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {},
   "devDependencies": {
     "mocha": "1.4.0",
-    "request": "2.11.4",
     "should": "1.1.0",
-    "uglify-js": "1.3.3"
+    "uglify-js": "1.3.3",
+    "xmlhttprequest": "1.4.2"
   }
 }
