Create photo tests
Signed-off-by: Chris Abrams <mail@chrisabrams.com>

--- a/build
+++ b/build
@@ -25,7 +25,8 @@ concat([
     './src/Config/Index.js',
     './src/Debug/Index.js',
     './src/App/Index.js',
-    './src/Photo/Index.js'
+    './src/Photo/Index.js',
+    './src/Photo/Create.js'
 ], DIST_FILE_PATH);
 
 /**
